# PluginTemp

./: CMakeLists.txt
Plugin/: CMakeLists.txt
Plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
cmake/: cpm.cmake
untitled/: CMakeLists.txt
